# fast-paste

./: .gitignore  CHANGELOG.md  CLAUDE.md  FastPaste.html  README.md  google_oauth.example.json  package-lock.json  package.json  update.json
.github/workflows/: release.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts  fastpaste-release.keystore  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/fastpaste/app/: FastPasteApp.kt  MainActivity.kt  MainViewModel.kt
android/app/src/main/java/com/fastpaste/app/cloud/: GoogleDriveCloudSync.kt
android/app/src/main/java/com/fastpaste/app/data/: AppDatabase.kt  ClipboardDao.kt  ClipboardEntry.kt  ClipboardPayload.kt  ClipboardRepository.kt
android/app/src/main/java/com/fastpaste/app/discovery/: ServiceDiscovery.kt
android/app/src/main/java/com/fastpaste/app/service/: ClipboardService.kt
android/app/src/main/java/com/fastpaste/app/sync/: AndroidClipboardCodec.kt  DeletedHistoryStore.kt  HistoryBackupStore.kt
android/app/src/main/java/com/fastpaste/app/ui/screens/: HomeScreen.kt
android/app/src/main/java/com/fastpaste/app/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/java/com/fastpaste/app/websocket/: WebSocketClient.kt
android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_notification.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/xml/: file_paths.xml
android/gradle/: libs.versions.toml
src/: index.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard.rs  cloud.rs  history.rs  hotkeys.rs  lib.rs  main.rs  network.rs  state.rs
