[package]
name = "fast-paste"
version = "2.0.0"
description = "Ultra-lightweight clipboard sync — Tauri + Rust"
authors = ["Xuan"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fast_paste_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-os = "2"
tokio = { version = "1.52.3", features = ["full"] }
tokio-tungstenite = "0.29.0"
futures-util = "0.3.32"
chrono = "0.4.44"
local-ip-address = "0.6.13"
gethostname = "1.1.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"

