[package]
name = "fast-paste"
version = "2.2.4"
description = "Ultra-lightweight clipboard sync — Tauri + Rust"
authors = ["Xuan"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fast_paste_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-os = "2"
tokio = { version = "1.52.3", features = ["full"] }
tokio-tungstenite = "0.29.0"
futures-util = "0.3.32"
chrono = "0.4.44"
local-ip-address = "0.6.13"
gethostname = "1.1.0"
base64 = "0.22"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
sha2 = "0.10"
url = "2"
urlencoding = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }
